Bug 1165303 - Avoid hiding and reshowing the window in response to our own settext messages because it makes Windows 10 unhappy. r=jimm, a=sledru